# uchi_homework

./: .gitignore  .pre-commit-config.yaml  Dockerfile  FINAL_REPORT.md  HOMEWORK.md  Makefile  README.md  docker-compose.yml  pyproject.toml  run_api.py
app/: main.py  schemas.py
app/api/: routes.py
app/core/: config.py  logger.py  translator.py
app/rag/: llm.py  memory.py  pipeline.py  prompts.py  retriever.py
data/raw/: moodle_all_pages.txt
scripts/: chunk_docs.py  ingest_chroma.py  parse_export_xml.py
tests/: test_api.py  test_retrieval.py
